--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/bootstrap-3.4-1.css">
-    <script src="js/jquery.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-3.4.1.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
     <title>Flash cards</title>
   </head>
   <body>
     <div class="container">
-      
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card">
+              <div class="front">
+                <h2><span id="question">Operator + </span></h2>
+              </div>
+              <div class="back">
+                <p><span id="answer">The addition operator produces the sum of numeric operands or string concatenation</p>
+                <p><strong>x + y</strong></p>
+              </div>
+          </div>
+        </div>
 
+      </div>
     </div>
 
   </body>
